--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ url: https://fbarde.github.io
 baseurl: /ADA_Data_Story/
 
 # Site settings
-title: Awesome Title
+title: flagADA22
 email: your-email@domain.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
