--- a/_config.yml
+++ b/_config.yml
@@ -9,16 +9,14 @@ description: "Write an awesome description for your new site here. You can edit 
 
 # Team names, titles and social links
 people:
-- name: Kay Garland
+- name: Flore Barde
   pic: 1
-  position: Lead Designer
+  position: Life Sciences
   social:
-    - title: twitter
-      url: #
-    - title: facebook
-      url: #
-    - title: stack-overflow
-      url: #
+    - title: github
+      url: https://github.com/fbarde
+    - title: email
+      url: flore.barde@epfl.ch
 
 - name: Larry Parker
   pic: 2
