--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ people:
     - title: linkedin
       url: https://www.linkedin.com/in/flore-barde-75753a24a/
 
-- name: Manon Bechaz
+- name: Manon Béchaz
   pic: #
   position: Master Computational Sciences
   social:
