--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: "Write an awesome description for your new site here. You can edit 
 # Team names, titles and social links
 people:
 - name: Flore Barde
-  pic: #
+  pic: flore.png
   position: Master Life Sciences
   social:
     - title: envelope
@@ -21,7 +21,7 @@ people:
       url: https://www.linkedin.com/in/flore-barde-75753a24a/
 
 - name: Manon Béchaz
-  pic: #
+  pic: manon.png
   position: Master Computational Sciences
   social:
     - title: envelope
@@ -32,7 +32,7 @@ people:
       url: #
 
 - name: Zoé Jeandupeux
-  pic: #
+  pic: zoe.png
   position: Master Physics
   social:
     - title: envelope
@@ -43,7 +43,7 @@ people:
       url: #
 
 - name: Killian Rigaux
-  pic: #
+  pic: killian.png
   position: Master Physics
   social:
     - title: envelope
