--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,7 +1,7 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: fed136
-  secondary: fec503   
+  primary: fec936 #fed136
+  secondary: feb303 #fec503   
   secondary-dark: 333
   muted: 777
 
