--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ people:
   position: Master Life Sciences
   social:
     - title: envelope
-      url: flore.barde@epfl.ch
+      url: mailto:flore.barde@epfl.ch
     - title: github
       url: https://github.com/fbarde
     - title: linkedin
