--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ people:
     - title: github
       url: #
     - title: linkedin
-      url: #
+      url: https://www.linkedin.com/in/manon-b%C3%A9chaz-599476198/
 
 - name: Killian Rigaux
   pic: killian
@@ -48,10 +48,6 @@ people:
   social:
     - title: envelope
       url: mailto:killian.rigaux@epfl.ch
-    - title: github
-      url: #
-    - title: linkedin
-      url: #
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
