--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ people:
     - title: envelope
       url: mailto:manon.bechaz@epfl.ch
     - title: github
-      url: #
+      url: https://github.com/mannexbcz
     - title: linkedin
       url: https://www.linkedin.com/in/manon-b%C3%A9chaz-599476198/
 
